--- a/week14/tidytuesday_beer.Rmd
+++ b/week14/tidytuesday_beer.Rmd
@@ -63,4 +63,4 @@ nj_beer %>%
 ggplotly(p2)
 ```
 
-An alternative to highcharter is plotly. It is more straight forward than highcharter especially if you are already familiar with ggplot. It is also more interactive than highcharter. Nonetheless, both are option for interactive data figures. 
+An alternative to highcharter is plotly. It is more straight forward than highcharter, especially if you are already familiar with ggplot. It is also more interactive than highcharter. Nonetheless, both are options for interactive data figures. 
